--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 <h2>{{ page.title }}</h2>
-<p><span class="post-date">{{ page.date | date_to_string }}</span></p>
 {{ content }}
 <hr />
+<center>
 <table cellpadding="5" cellspacing="5" align="center" border="0" style="border-bottom: 0px; padding-bottom: 10px;">
 	<tr>
 		<td align="center">
@@ -21,37 +21,25 @@ layout: default
 		</td>
 	</tr>
 </table>
-
-<div class="pagination">
-	{% if page.previous %}
-	   	<a href="{{ site.production_url }}{{ page.previous.url }}" class="older">Older</a>
-	{% else %}
-		<a href="/" class="older">Older</a>
-	{% endif %}
-	  {% if page.next %}
-	    <a href="{{ site.production_url }}{{ page.next.url }}" class="newer">Newer</a>
-	  {% else %}
-	    <span class="next">Newer</span>
-	  {% endif %}
-</div>
+</center>
 
 <div id="disqus_thread"></div>
 <script>
 
 /**
- *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
- *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables */
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 /*
 var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 */
 (function() { // DON'T EDIT BELOW THIS LINE
-    var d = document, s = d.createElement('script');
-    s.src = '//apievangelist.disqus.com/embed.js';
-    s.setAttribute('data-timestamp', +new Date());
-    (d.head || d.body).appendChild(s);
+var d = document, s = d.createElement('script');
+s.src = 'https://algorotoscope.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
