--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,10 @@
 ---
 layout: default
 ---
-<h2>{{ page.title }}</h2>
-<p><i>{{ page.date | date_to_string }}</i></p>
+<p align="center">
+	<span style="font-size: 18px;"><strong>{{ page.title }}</strong></span><br />
+	<i>{{ page.date | date_to_string }}</i>
+</p>
 {{ content }}
 <hr />
 <center>
