--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<p align="center">
+<p style="margin-top: 15px;">
 	<span style="font-size: 18px;"><strong>{{ page.title }}</strong></span><br />
 	<i>{{ page.date | date_to_string }}</i>
 </p>
