--- a/_includes/sidebar_nav.html
+++ b/_includes/sidebar_nav.html
@@ -3,8 +3,8 @@
     <h2>Menu</h2>
   </header>
   <ul>
-    <li><a href="/">Images</a></li>
-    <li><a href="/blog">Updates</a></li>
+    <li><a href="/">Works</a></li>
+    <li><a href="/updates">Updates</a></li>
     <li><a href="http://apievangelist.com">API Evangelist</a></li>
   </ul>
 </nav>
