--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 	<span style="font-size: 18px;"><strong>{{ page.title }}</strong></span><br />
 	<i>{{ page.date | date_to_string }}</i>
 </p>
-{{ content }}
+<p>{{ content }}</p>
 <hr />
 <center>
 <table cellpadding="5" cellspacing="5" align="center" border="0" style="border-bottom: 0px; padding-bottom: 10px;">
