--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,11 @@
 ---
 layout: default
 ---
-<center>
-<span style="font-size: 18px;"><strong>{{ page.title }}</strong></span><br />
-<i>{{ page.date | date_to_string }}</i><br />
+<p style="margin-top: 15px;">
+	<span style="font-size: 18px;"><strong>{{ page.title }}</strong></span><br />
+	<i>{{ page.date | date_to_string }}</i>
+</p>
 {{ content }}
-</center>
 <hr />
 <center>
 <table cellpadding="5" cellspacing="5" align="center" border="0" style="border-bottom: 0px; padding-bottom: 10px;">
