--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,10 +1,8 @@
 ---
 layout: default
 ---
-<p style="margin-top: 15px;">
-	<span style="font-size: 18px;"><strong>{{ page.title }}</strong></span><br />
-	<i>{{ page.date | date_to_string }}</i>
-</p>
+<p style="font-size: 18px;"><strong>{{ page.title }}</strong></p>
+<p><i>{{ page.date | date_to_string }}</i></p>
 {{ content }}
 <hr />
 <center>
