--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,6 +24,19 @@ layout: default
 </table>
 </center>
 
+<center>
+<table cellpadding="5" cellspacing="5" align="center" border="0" style="border-bottom: 0px; padding-bottom: 10px;">
+	<tr>
+		<td align="center">
+			<a href="/" target="_bank">Return To Works</a>
+		</td>
+		<td align="center">
+			<a href="/updates" target="_bank">Return to Updates</a>
+		</td>
+	</tr>
+</table>
+</center>
+
 <div id="disqus_thread"></div>
 <script>
 
