--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,12 +25,12 @@ layout: default
 </center>
 
 <center>
-<table cellpadding="5" cellspacing="5" align="center" border="0" style="border-bottom: 0px; padding-bottom: 10px;">
+<table cellpadding="5" cellspacing="5" align="center" border="0" width="75%">
 	<tr>
-		<td align="center">
+		<td align="center" width="50%">
 			<a href="/" target="_bank">Return To Works</a>
 		</td>
-		<td align="center">
+		<td align="center" width="50%">
 			<a href="/updates" target="_bank">Return to Updates</a>
 		</td>
 	</tr>
