--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 ---
-<p style="font-size: 18px;"><strong>{{ page.title }}</strong><br />
+
+<br /><p style="font-size: 18px;"><strong>{{ page.title }}</strong><br />
 <i>{{ page.date | date_to_string }}</i></p>
 {{ content }}
 <hr />
